# maqueta-qkd

./: .gitignore  Dockerfile  README.md  docker-compose.yml  lorem.txt  start.sh
c/: DockerfileAlice  DockerfileBob  Makefile  MakefileAlice  MakefileBob  alice.c  bob.c  conections.c  config.json  cryptografy.c  cryptografy.h  docker-compose.yml
c/code/: status.c
c/core/: connection_qkd.c  connection_qkd.h  cryptografy.c  cryptografy.h  handle_json.c  handle_json.h  handle_msg.c  handle_msg.h  sign_dilithium.c  sign_dilithium.h
certs/: account-2540-server-ca-qukaydee-com.crt  account-2810-server-ca-qukaydee-com.crt  account-3009-server-ca-qukaydee-com.crt  client-root-ca.crt  client-root-ca.key  client-root-ca.srl  sae-1.crt  sae-1.key  sae-1.pem  sae-2.crt  sae-2.key  sae-2.pem
python/: getKey.py  getKeyId.py  status.py
rust/: Cargo.toml  Dockerfile
rust/sae/src/: main.rs  qukaydee.rs
sae/src/: sae.rs
