[package]
name = "rust-qukaydee"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "native-tls"]} # rustls-tls
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
base64 = "0.22.1"
